[metadata]
name = tadaaa
version = 0.0.3
url = https://github.com/Yankovsky/tadaaa
author = Andrey Yankovsky
author_email = YankovskyAndrey@gmail.com
description = Plays funny sounds
keywords = tada, fanfares, sad
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
install_requires = ["numpy", "simpleaudio"]

[options]
packages = find:
install_requires =
    numpy
    simpleaudio
